--- a/css/style.css
+++ b/css/style.css
@@ -10,13 +10,13 @@
   
   /* header**/
   header{
-      background-color: grey; 
+      /* background-color: grey; 
       display: flex;
       justify-content: space-between;
       align-items: center;
       padding: 10px; 
       width: 100%;
-      top: 0;
+      top: 0; */
       position:fixed;
       z-index: 1;
       
@@ -40,7 +40,13 @@
   
   }
   
+  .menu-icon{
+    background-image: url(../img/burger-menu-com.svg);
+  }
   
+  .buttom-menu{
+    margin-right: 20px;
+  }
   
   /*fin de header**/
   /* main  index**/
@@ -77,7 +83,7 @@
     } 
   .card{ 
       margin-bottom: 40px;
-      width: 350px;
+      width: 300px;
       height: 400px;
       background-color:gray;
       text-align: center;
@@ -95,7 +101,6 @@
   
   .banner{
       margin-top: 220px;
-      /* background-image:url(./../img/Banner.png); */
       display: flex;
       gap: 0px;
       width:auto;
@@ -124,14 +129,17 @@
       text-shadow: 2px 1px 2px white;
       
   }
-  .redes img{
+  .redes-grid img{
       width: 40px;
       
   }
   
-  .redes{
-      display: flex;
+  .redes-grid{
+      display: grid;
+      grid-template-columns:repeat(4,1fr);
+      /* grid-template-rows: repeat(3,1fr); */
       align-items: center;
+      justify-items: center;
   }
 
 /* media queries */
@@ -152,7 +160,7 @@
       }
       
       .card img{
-        width: 300px;;
+        width: 270px;;
         align-items: center;
       }
       .banner img {
@@ -162,5 +170,6 @@
       .banner{
         margin-top: 150px;
     }
-
+    
+  
   }
