contenido en colecciones

--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,21 +1,16 @@
 /*estilos-footer*/ 
     footer{ background-color:grey;
         display: flex;
+        
         .redes-grid{
             img{
-                width: 40px;               
+                width: 40px;         
             }
             display: grid;
             grid-template-columns:repeat(3,1fr);
             align-items: center;
             justify-items: center;
-        }
-        h3{ 
-            color: beige;
-            margin: 40px;
-            font-size: 30px;
-            text-align: center;
-            text-shadow: 2px 1px 2px white;
-            
-        }
+            margin-block: 50px;
+            gap: 10px;
+        }    
     }
