--- a/css/main.css
+++ b/css/main.css
@@ -58,6 +58,10 @@ main .card {
 main .card img {
   object-fit: cover;
   width: 100%;
+  height: 100%;
+}
+main .coleccion {
+  height: calc(100% - 100px);
 }
 main section {
   margin-top: 40px;
@@ -80,16 +84,11 @@ footer .redes-grid {
   grid-template-columns: repeat(3, 1fr);
   align-items: center;
   justify-items: center;
+  margin-block: 50px;
+  gap: 10px;
 }
 footer .redes-grid img {
   width: 40px;
-}
-footer h3 {
-  color: beige;
-  margin: 40px;
-  font-size: 30px;
-  text-align: center;
-  text-shadow: 2px 1px 2px white;
 }
 
 /*media-queries*/
