--- a/scss/_main-index.scss
+++ b/scss/_main-index.scss
@@ -26,18 +26,18 @@ main{
         overflow: hidden;
         box-shadow: 5px 5px 5px 5px rgba (0,0,0,0.51);
         -webkit-box-shadow: 5px 5px 5px 5px rgba(207, 206, 206, 0.51);
-        -moz-box-shadow: 5px 5px 5px 5px rgba(201, 201, 201, 0.51); 
+        -moz-box-shadow: 5px 5px 5px 5px rgba(201, 201, 201, 0.51);  
     }
     .card img{
         object-fit: cover;
-        width: 90%; 
+        width: 100%;
+        height: 100%;    
     }
     
-    .card-coleccion img{
-        width: 100%;
+    .coleccion{
         height: calc(100% - 100px);
     }
-
+    
     section{margin-top: 40px;
 
         h1{ color: white;
