mixins y demas cosas de sass

--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,15 @@
+/*reset*/
+* {
+  margin: auto;
+  padding: 0px;
+  box-sizing: border-box;
+}
+
+main .card {
+  background-color: gray;
+  color: white;
+}
+
 /*estilos header*/
 header {
   position: fixed;
@@ -25,16 +37,17 @@ header nav ul li a {
 }
 
 /*main index*/
-/*estilos main*/
 main {
   margin-top: 215px;
   background-color: black;
 }
-main .banner {
+main .banner img {
   margin-top: 220px;
   display: flex;
   gap: 0px;
-  width: auto;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 main .contenedor-flex {
   display: flex;
@@ -47,7 +60,7 @@ main .card {
   margin-bottom: 40px;
   width: 300px;
   height: 400px;
-  background-color: gray;
+  font-family: "montserrat" sans-serif;
   text-align: center;
   border-radius: 20px;
   overflow: hidden;
