--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-
+/* 
 *{
 
 
@@ -6,7 +6,7 @@
     padding: 0px;
     box-sizing: border-box;
       
-  }
+  } */
 /*   
   /* header*/
   /* header{
