--- a/scss/components/pages/_main-index.scss
+++ b/scss/components/pages/_main-index.scss
@@ -1,26 +1,27 @@
 /*main index*/
-/*estilos main*/
+
 main{
     margin-top: 215px;
-    background-color: black;
-    .banner{
+    background-color: $color-principal;
+    .banner img{
         margin-top: 220px;
         display: flex;
         gap: 0px;
-        width:auto;        
+        width:100%;   
+        height: 100%;
+        object-fit: cover;
     }
     .contenedor-flex{ 
-        display: flex;
-        justify-content:space-evenly;
-        flex-wrap: wrap;
+        @include flex(space-evenly,wrap);     
         gap: 40px;
         margin-bottom: 0px;
       } 
-      .card{    
+      .card{     
         margin-bottom: 40px;
         width: 300px;
         height: 400px;
-        background-color:gray;
+        @extend %estilos-colores;
+        font-family:"montserrat" sans-serif;
         text-align: center;
         border-radius: 20px;
         overflow: hidden;
@@ -28,6 +29,8 @@ main{
         -webkit-box-shadow: 5px 5px 5px 5px rgba(207, 206, 206, 0.51);
         -moz-box-shadow: 5px 5px 5px 5px rgba(201, 201, 201, 0.51);  
     }
+    
+    
     .card img{
         object-fit: cover;
         width: 100%;
@@ -40,11 +43,11 @@ main{
     
     section{margin-top: 40px;
 
-        h1{ color: white;
+        h1{ color: $color-secundario;
             margin: 40px;
             font-size: 50px;
             text-align: center;
-            text-shadow: 2px 1px 2px white;
+            text-shadow: 2px 1px 2px $color-secundario;
         }  
     }
 }
