--- a/scss/components/pages/_main-index.scss
+++ b/scss/components/pages/_main-index.scss
@@ -17,7 +17,7 @@ main{
         margin-bottom: 0px;
       } 
       .card{     
-        margin-bottom: 40px;
+        margin-bottom: 30px;
         width: 300px;
         height: 400px;
         @extend %estilos-colores;
@@ -50,4 +50,12 @@ main{
             text-shadow: 2px 1px 2px $color-secundario;
         }  
     }
+    .contact{
+        div label{
+            color:$color-secundario;
+        }
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
 }
