--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -12,5 +12,10 @@
             justify-items: center;
             margin-block: 50px;
             gap: 10px;
-        }    
+        }  
+        
+        .img-footer:hover{
+            transform: scale(1.2);
+            transition: 1.1s;
+        }
     }
