--- a/css/main.css
+++ b/css/main.css
@@ -54,19 +54,30 @@ main .contenedor-flex {
   justify-content: space-evenly;
   flex-wrap: wrap;
   gap: 40px;
-  margin-bottom: 0px;
+  height: auto;
+}
+main .contenedor-flex h2 {
+  color: white;
+}
+main .contenedor-flex p {
+  color: white;
 }
 main .card {
-  margin-bottom: 30px;
+  margin-bottom: 40px;
   width: 300px;
   height: 400px;
   font-family: "montserrat" sans-serif;
   text-align: center;
   border-radius: 20px;
   overflow: hidden;
+  cursor: pointer;
   box-shadow: 5px 5px 5px 5px rgba 0, 0, 0, 0.51;
   -webkit-box-shadow: 5px 5px 5px 5px rgba(207, 206, 206, 0.51);
   -moz-box-shadow: 5px 5px 5px 5px rgba(201, 201, 201, 0.51);
+}
+main .card:hover {
+  transform: scale(1.1);
+  transition: 1.1s;
 }
 main .card img {
   object-fit: cover;
@@ -75,6 +86,10 @@ main .card img {
 }
 main .coleccion {
   height: calc(100% - 100px);
+}
+main .coleccion:hover {
+  transform: scale(1.1);
+  transition: 1.5s;
 }
 main section {
   margin-top: 40px;
@@ -90,6 +105,7 @@ main .contact {
   display: flex;
   justify-content: center;
   flex-direction: column;
+  gap: 5px;
 }
 main .contact div label {
   color: white;
@@ -110,6 +126,10 @@ footer .redes-grid {
 }
 footer .redes-grid img {
   width: 40px;
+}
+footer .img-footer:hover {
+  transform: scale(1.2);
+  transition: 1.1s;
 }
 
 /*media-queries*/
